--- a/screens/about.html
+++ b/screens/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cyclopentanone</title>
+    <title>About Freesia Chemicals</title>
     <script
       type="text/javascript"
       src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"
@@ -15,7 +15,6 @@
       rel="stylesheet"
     />
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-    <title>Page Title</title>
   </head>
   <body>
     <div class="header" id="myHeader">
@@ -23,9 +22,9 @@
         <h1><a href="index.html">Freesia</a></h1>
 
         <div class="headerOptions">
-          <a href="index.html">Home</a>
-          <a href="index.html#productList">Products</a>
-          <a href="about.html">About</a>
+          <a href="../index.html">Home</a>
+          <a href="../index.html#productList">Products</a>
+          <a href="../screens/about.html">About</a>
           <a href="contact.html">Contact</a>
         </div>
       </div>
