--- a/screens/contact.html
+++ b/screens/contact.html
@@ -26,7 +26,7 @@
         <div class="headerOptions">
           <a href="index.html">Home</a>
           <a href="index.html#productList">Products</a>
-          <a href="about.html">About</a>
+          <a href="../screens/about.html">About</a>
           <a href="contact.html">Contact</a>
         </div>
       </div>
@@ -294,7 +294,7 @@
  }
       // {lat: 19.1641031, lng: 72.93912809999999}
     </script>
-    <script data-cfasync="false" type="text/javascript" src="form-submission-handler.js"></script>
+    <script data-cfasync="false" type="text/javascript" src="../form-submission-handler.js"></script>
   </body>
 </html>
 
