--- a/screens/product/1-5Dibromopentane.html
+++ b/screens/product/1-5Dibromopentane.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cyclopentyl Amine</title>
+    <title>1-5 Dibromopentane</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    
     <script>
       type = 'text/javascript';
       src = 'http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js';
@@ -23,10 +23,10 @@
         <h1><a href="index.html">Freesia</a></h1>
 
         <div class="headerOptions">
-          <a href="index.html">Home</a>
-          <a href="index.html#productList">Products</a>
-          <a href="about.html">About</a>
-          <a href="contact.html">Contact</a>
+          <a href="../../index.html">Home</a>
+          <a href="../../index.html#productList">Products</a>
+          <a href="./screens/about.html">About</a>
+          <a href="./screens/contact.html">Contact</a>
         </div>
       </div>
     </div>
@@ -34,20 +34,16 @@
     <div class="mainContainer">
       <div class="content">
         <div class="papers">
-            <h1>Cyclopentyl Amine</h1>
+            <h1>1-5 Dibromopentane</h1>
           <h2>Identitiers</h2>
           <table>
             <tr>
               <td class="title">CAS number</td>
-              <td class="desc">1003-03-8</td>
+              <td class="desc">111-24-0</td>
             </tr>
             <tr>
-                <td class="title">CN number</td>
-                <td class="desc">2921 30 99</td>
-              </tr>
-            <tr>
               <td class="title">Appearance</td>
-              <td class="desc">Clear, colourless  or yellow liquid, amine odour, infinitely miscible</td>
+              <td class="desc">clear, colourless to Pale yellow liquid</td>
             </tr>
           </table>
 
@@ -55,29 +51,35 @@
           <table>
             <tr>
               <td class="title">Molecular formula</td>
-              <td class="desc">C5H11N</td>
+              <td class="desc">Br(CH2)5Br</td>
             </tr>
             <tr>
-              <td class="title">Density at 20&#8451;</td>
+              <td class="title">Molar mass</td>
               <td class="desc">
-                  862 Kg/m
+                  229.94g/mol
+              </td>
+            </tr>
+            <tr>
+              <td class="title">Density</td>
+              <td class="desc">
+                  1.68 - 1.71g/ml
               </td>
             </tr>
             <tr>
               <td class="title">Boiling point</td>
-              <td class="desc">106 ~ 108&#8451;</td>
+              <td class="desc">222 - 224&#8451;</td>
             </tr>
             <tr>
               <td class="title">Flash Point</td>
-              <td class="desc">11&#8451;</td>
+              <td class="desc">110&#8451;</td>
             </tr>
             <tr>
               <td class="title">Purity</td>
-              <td class="desc">99.0% min</td>
+              <td class="desc">98.0% min</td>
             </tr>
             <tr>
               <td class="title">Moisture</td>
-              <td class="desc">0.3% max</td>
+              <td class="desc">0.1% max</td>
             </tr>
           </table>
         </div>
@@ -86,7 +88,7 @@
         <div class="widgetStyle">
           <iframe
             class="pubchem-widget"
-            src="https://pubchem.ncbi.nlm.nih.gov/compound/2906#section=3D-Conformer&embed=true&hide_title=true"
+            src="https://pubchem.ncbi.nlm.nih.gov/compound/8100#section=3D-Conformer&embed=true&hide_title=true"
           ></iframe>
         </div>
       </div>
