--- a/screens/product/alphaTetralone.html
+++ b/screens/product/alphaTetralone.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>1-5 Dibromopentane</title>
+    <title>Alpha Tetralone</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    
     <script>
       type = 'text/javascript';
       src = 'http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js';
@@ -23,10 +23,10 @@
         <h1><a href="index.html">Freesia</a></h1>
 
         <div class="headerOptions">
-          <a href="index.html">Home</a>
-          <a href="index.html#productList">Products</a>
-          <a href="about.html">About</a>
-          <a href="contact.html">Contact</a>
+          <a href="../index.html">Home</a>
+          <a href="../index.html#productList">Products</a>
+          <a href="./screens/about.html">About</a>
+          <a href="./screens/contact.html">Contact</a>
         </div>
       </div>
     </div>
@@ -34,16 +34,16 @@
     <div class="mainContainer">
       <div class="content">
         <div class="papers">
-            <h1>1-5 Dibromopentane</h1>
+            <h1>Alpha Tetralone</h1>
           <h2>Identitiers</h2>
           <table>
             <tr>
               <td class="title">CAS number</td>
-              <td class="desc">111-24-0</td>
+              <td class="desc">529-34-0</td>
             </tr>
             <tr>
               <td class="title">Appearance</td>
-              <td class="desc">clear, colourless to Pale yellow liquid</td>
+              <td class="desc">clear, colourless to yellow liquid</td>
             </tr>
           </table>
 
@@ -51,23 +51,23 @@
           <table>
             <tr>
               <td class="title">Molecular formula</td>
-              <td class="desc">Br(CH2)5Br</td>
+              <td class="desc">C10H10O</td>
             </tr>
             <tr>
               <td class="title">Molar mass</td>
               <td class="desc">
-                  229.94g/mol
+                  146.19g/mol
               </td>
             </tr>
             <tr>
               <td class="title">Density</td>
               <td class="desc">
-                  1.68 - 1.71g/ml
+                  1.09 - 1.10g/ml
               </td>
             </tr>
             <tr>
               <td class="title">Boiling point</td>
-              <td class="desc">222 - 224&#8451;</td>
+              <td class="desc">255 - 257&#8451;</td>
             </tr>
             <tr>
               <td class="title">Flash Point</td>
@@ -79,7 +79,7 @@
             </tr>
             <tr>
               <td class="title">Moisture</td>
-              <td class="desc">0.1% max</td>
+              <td class="desc">0.3% max</td>
             </tr>
           </table>
         </div>
@@ -88,7 +88,7 @@
         <div class="widgetStyle">
           <iframe
             class="pubchem-widget"
-            src="https://pubchem.ncbi.nlm.nih.gov/compound/8100#section=3D-Conformer&embed=true&hide_title=true"
+            src="https://pubchem.ncbi.nlm.nih.gov/compound/10724#section=3D-Conformer&embed=true&hide_title=true"
           ></iframe>
         </div>
       </div>
