--- a/screens/product/cyclopentanol.html
+++ b/screens/product/cyclopentanol.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cyclopentanone</title>
+    <title>Cyclopentanol</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    
     <script>
       type = 'text/javascript';
       src = 'http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js';
@@ -23,10 +23,10 @@
         <h1><a href="index.html">Freesia</a></h1>
 
         <div class="headerOptions">
-          <a href="index.html">Home</a>
-          <a href="index.html#productList">Products</a>
-          <a href="about.html">About</a>
-          <a href="contact.html">Contact</a>
+          <a href="../../index.html">Home</a>
+          <a href="../../index.html#productList">Products</a>
+          <a href="./screens/about.html">About</a>
+          <a href="./screens/contact.html">Contact</a>
         </div>
       </div>
     </div>
@@ -34,13 +34,12 @@
     <div class="mainContainer">
       <div class="content">
         <div class="papers">
-            <h1>Cyclopentanone</h1>
-
+            <h1>Cyclopentanol</h1>
           <h2>Identitiers</h2>
           <table>
             <tr>
               <td class="title">CAS number</td>
-              <td class="desc">120-92-3</td>
+              <td class="desc">96-41-3</td>
             </tr>
             <tr>
               <td class="title">Appearance</td>
@@ -52,27 +51,27 @@
           <table>
             <tr>
               <td class="title">Molecular formula</td>
-              <td class="desc">C5H8O</td>
+              <td class="desc">C5H10O</td>
             </tr>
             <tr>
               <td class="title">Molar mass</td>
               <td class="desc">
-                84.12g/mol
+                86.13g/mol
               </td>
             </tr>
             <tr>
               <td class="title">Density</td>
               <td class="desc">
-                0.948 - 0.952g/cc
+                  0.949g/ml
               </td>
             </tr>
             <tr>
               <td class="title">Boiling point</td>
-              <td class="desc">130 ~ 131&#8451;</td>
+              <td class="desc">139 ~ 140&#8451;</td>
             </tr>
             <tr>
               <td class="title">Flash Point</td>
-              <td class="desc">30&#8451;</td>
+              <td class="desc">51&#8451;</td>
             </tr>
             <tr>
               <td class="title">Purity</td>
@@ -89,7 +88,7 @@
         <div class="widgetStyle">
           <iframe
             class="pubchem-widget"
-            src="https://pubchem.ncbi.nlm.nih.gov/compound/Cyclopentanone#section=3D-Conformer&embed=true&hide_title=true"
+            src="https://pubchem.ncbi.nlm.nih.gov/compound/7298#section=3D-Conformer&embed=true&hide_title=true"
           ></iframe>
         </div>
       </div>
@@ -187,12 +186,11 @@
   }
   h1{
 
-    color: black;
-    font-family: 'Gugi', cursive;
-    font-weight: 300;
-    font-size: 28px;
-  }
-  
+color: black;
+font-family: 'Gugi', cursive;
+font-weight: 300;
+font-size: 28px;
+}
   h2 {
     color: #42d1d8;
     font-family: 'Gugi', cursive;
