--- a/screens/product/cyclopentanone.html
+++ b/screens/product/cyclopentanone.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Methyl-4-Phenyl-1 Butyrate</title>
+    <title>Cyclopentanone</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    
     <script>
       type = 'text/javascript';
       src = 'http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js';
@@ -23,10 +23,10 @@
         <h1><a href="index.html">Freesia</a></h1>
 
         <div class="headerOptions">
-          <a href="index.html">Home</a>
-          <a href="index.html#productList">Products</a>
-          <a href="about.html">About</a>
-          <a href="contact.html">Contact</a>
+          <a href="../../index.html">Home</a>
+          <a href="../../index.html#productList">Products</a>
+          <a href="./screens/about.html">About</a>
+          <a href="./screens/contact.html">Contact</a>
         </div>
       </div>
     </div>
@@ -34,12 +34,13 @@
     <div class="mainContainer">
       <div class="content">
         <div class="papers">
-            <h1>Methyl-4-Phenyl-1 Butyrate</h1>
+            <h1>Cyclopentanone</h1>
+
           <h2>Identitiers</h2>
           <table>
             <tr>
               <td class="title">CAS number</td>
-              <td class="desc">2046-17-5</td>
+              <td class="desc">120-92-3</td>
             </tr>
             <tr>
               <td class="title">Appearance</td>
@@ -51,23 +52,23 @@
           <table>
             <tr>
               <td class="title">Molecular formula</td>
-              <td class="desc">C11H14O2</td>
+              <td class="desc">C5H8O</td>
             </tr>
             <tr>
               <td class="title">Molar mass</td>
               <td class="desc">
-                  178.23g/mol
+                84.12g/mol
               </td>
             </tr>
             <tr>
-              <td class="title">Density at 25&#8451;</td>
+              <td class="title">Density</td>
               <td class="desc">
-                  0.99600 to 1.00200g/cc
+                0.948 - 0.952g/cc
               </td>
             </tr>
             <tr>
-              <td class="title">Boiling point at 760.00 mm Hg</td>
-              <td class="desc">258.00 to 259.00 &#8451;</td>
+              <td class="title">Boiling point</td>
+              <td class="desc">130 ~ 131&#8451;</td>
             </tr>
             <tr>
               <td class="title">Flash Point</td>
@@ -77,6 +78,10 @@
               <td class="title">Purity</td>
               <td class="desc">99.0% min</td>
             </tr>
+            <tr>
+              <td class="title">Moisture</td>
+              <td class="desc">0.3% max</td>
+            </tr>
           </table>
         </div>
       </div>
@@ -84,7 +89,7 @@
         <div class="widgetStyle">
           <iframe
             class="pubchem-widget"
-            src="https://pubchem.ncbi.nlm.nih.gov/compound/281254#section=3D-Conformer&embed=true&hide_title=true"
+            src="https://pubchem.ncbi.nlm.nih.gov/compound/Cyclopentanone#section=3D-Conformer&embed=true&hide_title=true"
           ></iframe>
         </div>
       </div>
@@ -182,11 +187,12 @@
   }
   h1{
 
-color: black;
-font-family: 'Gugi', cursive;
-font-weight: 300;
-font-size: 28px;
-}
+    color: black;
+    font-family: 'Gugi', cursive;
+    font-weight: 300;
+    font-size: 28px;
+  }
+  
   h2 {
     color: #42d1d8;
     font-family: 'Gugi', cursive;
