--- a/screens/product/cyclopentylAmine.html
+++ b/screens/product/cyclopentylAmine.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cyclopentanol</title>
+    <title>Cyclopentyl Amine</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    
     <script>
       type = 'text/javascript';
       src = 'http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js';
@@ -23,10 +23,10 @@
         <h1><a href="index.html">Freesia</a></h1>
 
         <div class="headerOptions">
-          <a href="index.html">Home</a>
-          <a href="index.html#productList">Products</a>
-          <a href="about.html">About</a>
-          <a href="contact.html">Contact</a>
+          <a href="../../index.html">Home</a>
+          <a href="../../index.html#productList">Products</a>
+          <a href="./screens/about.html">About</a>
+          <a href="./screens/contact.html">Contact</a>
         </div>
       </div>
     </div>
@@ -34,16 +34,20 @@
     <div class="mainContainer">
       <div class="content">
         <div class="papers">
-            <h1>Cyclopentanol</h1>
+            <h1>Cyclopentyl Amine</h1>
           <h2>Identitiers</h2>
           <table>
             <tr>
               <td class="title">CAS number</td>
-              <td class="desc">96-41-3</td>
+              <td class="desc">1003-03-8</td>
             </tr>
             <tr>
+                <td class="title">CN number</td>
+                <td class="desc">2921 30 99</td>
+              </tr>
+            <tr>
               <td class="title">Appearance</td>
-              <td class="desc">clear, colourless liquid</td>
+              <td class="desc">Clear, colourless  or yellow liquid, amine odour, infinitely miscible</td>
             </tr>
           </table>
 
@@ -51,27 +55,21 @@
           <table>
             <tr>
               <td class="title">Molecular formula</td>
-              <td class="desc">C5H10O</td>
+              <td class="desc">C5H11N</td>
             </tr>
             <tr>
-              <td class="title">Molar mass</td>
+              <td class="title">Density at 20&#8451;</td>
               <td class="desc">
-                86.13g/mol
-              </td>
-            </tr>
-            <tr>
-              <td class="title">Density</td>
-              <td class="desc">
-                  0.949g/ml
+                  862 Kg/m
               </td>
             </tr>
             <tr>
               <td class="title">Boiling point</td>
-              <td class="desc">139 ~ 140&#8451;</td>
+              <td class="desc">106 ~ 108&#8451;</td>
             </tr>
             <tr>
               <td class="title">Flash Point</td>
-              <td class="desc">51&#8451;</td>
+              <td class="desc">11&#8451;</td>
             </tr>
             <tr>
               <td class="title">Purity</td>
@@ -88,7 +86,7 @@
         <div class="widgetStyle">
           <iframe
             class="pubchem-widget"
-            src="https://pubchem.ncbi.nlm.nih.gov/compound/7298#section=3D-Conformer&embed=true&hide_title=true"
+            src="https://pubchem.ncbi.nlm.nih.gov/compound/2906#section=3D-Conformer&embed=true&hide_title=true"
           ></iframe>
         </div>
       </div>
