--- a/screens/product/cyclopentylChloride.html
+++ b/screens/product/cyclopentylChloride.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>4-Phenyl-1-Butanol</title>
+    <title>Cyclopentyl Chloride</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    
     <script>
       type = 'text/javascript';
       src = 'http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js';
@@ -23,10 +23,10 @@
         <h1><a href="index.html">Freesia</a></h1>
 
         <div class="headerOptions">
-          <a href="index.html">Home</a>
-          <a href="index.html#productList">Products</a>
-          <a href="about.html">About</a>
-          <a href="contact.html">Contact</a>
+          <a href="../../index.html">Home</a>
+          <a href="../../index.html#productList">Products</a>
+          <a href="./screens/about.html">About</a>
+          <a href="./screens/contact.html">Contact</a>
         </div>
       </div>
     </div>
@@ -34,12 +34,12 @@
     <div class="mainContainer">
       <div class="content">
         <div class="papers">
-            <h1>4-Phenyl-1-Butanol</h1>
+            <h1>Cyclopentyl Chloride</h1>
           <h2>Identitiers</h2>
           <table>
             <tr>
               <td class="title">CAS number</td>
-              <td class="desc">3360-41-6</td>
+              <td class="desc">930-28-9</td>
             </tr>
             <tr>
               <td class="title">Appearance</td>
@@ -51,35 +51,35 @@
           <table>
             <tr>
               <td class="title">Molecular formula</td>
-              <td class="desc">C6H5(CH2)4OH</td>
+              <td class="desc">C5H9Cl</td>
             </tr>
             <tr>
               <td class="title">Molar mass</td>
               <td class="desc">
-                  150.218 g/mol
+                  104.57796 g/mol
               </td>
             </tr>
             <tr>
               <td class="title">Density</td>
               <td class="desc">
-                  0.970 g/cc
+                  1 g/cc
               </td>
             </tr>
             <tr>
               <td class="title">Boiling point</td>
-              <td class="desc">140&#8451;/14mm Hg</td>
+              <td class="desc">113.5&#8451;</td>
             </tr>
             <tr>
               <td class="title">Flash Point</td>
-              <td class="desc">110&#8451;</td>
+              <td class="desc">15.56&#8451;</td>
             </tr>
             <tr>
               <td class="title">Purity</td>
-              <td class="desc">98.0% min</td>
+              <td class="desc">99.0% min</td>
             </tr>
             <tr>
               <td class="title">Moisture</td>
-              <td class="desc">0.3% max</td>
+              <td class="desc">0.1% max</td>
             </tr>
           </table>
         </div>
@@ -88,7 +88,7 @@
         <div class="widgetStyle">
           <iframe
             class="pubchem-widget"
-            src="https://pubchem.ncbi.nlm.nih.gov/compound/76889#section=3D-Conformer&embed=true&hide_title=true"
+            src="https://pubchem.ncbi.nlm.nih.gov/compound/70252#section=3D-Conformer&embed=true&hide_title=true"
           ></iframe>
         </div>
       </div>
