--- a/screens/product/Bromo5Chloropentane.html
+++ b/screens/product/Bromo5Chloropentane.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cyclopentyl Bromide</title>
+    <title>1-Bromo-5-Chloropentane</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    
     <script>
       type = 'text/javascript';
       src = 'http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js';
@@ -23,10 +23,10 @@
         <h1><a href="index.html">Freesia</a></h1>
 
         <div class="headerOptions">
-          <a href="index.html">Home</a>
-          <a href="index.html#productList">Products</a>
-          <a href="about.html">About</a>
-          <a href="contact.html">Contact</a>
+          <a href="../../index.html">Home</a>
+          <a href="../../index.html#productList">Products</a>
+          <a href="./screens/about.html">About</a>
+          <a href="./screens/contact.html">Contact</a>
         </div>
       </div>
     </div>
@@ -34,16 +34,16 @@
     <div class="mainContainer">
       <div class="content">
         <div class="papers">
-            <h1>Cyclopentyl Bromide</h1>
+            <h1>1-Bromo-5-Chloropentane</h1>
           <h2>Identitiers</h2>
           <table>
             <tr>
               <td class="title">CAS number</td>
-              <td class="desc">137-43-9</td>
+              <td class="desc">54512-75-3</td>
             </tr>
             <tr>
               <td class="title">Appearance</td>
-              <td class="desc">clear, colourless to pale brown liquid</td>
+              <td class="desc">clear to slightly yellow liquid</td>
             </tr>
           </table>
 
@@ -51,35 +51,35 @@
           <table>
             <tr>
               <td class="title">Molecular formula</td>
-              <td class="desc">C5H9Br</td>
+              <td class="desc">Cl(CH2)5Br</td>
             </tr>
             <tr>
               <td class="title">Molar mass</td>
               <td class="desc">
-                  149.03g/mol
+                  185.50g/mol
               </td>
             </tr>
             <tr>
               <td class="title">Density</td>
               <td class="desc">
-                  1.3856g/cc
+                  1.40 - 1.41g/ml
               </td>
             </tr>
             <tr>
               <td class="title">Boiling point</td>
-              <td class="desc">137 ~ 139&#8451;</td>
+              <td class="desc">210 - 212&#8451;</td>
             </tr>
             <tr>
               <td class="title">Flash Point</td>
-              <td class="desc">35&#8451;</td>
+              <td class="desc">95&#8451;</td>
             </tr>
             <tr>
               <td class="title">Purity</td>
-              <td class="desc">99.0% min</td>
+              <td class="desc">98.0% min</td>
             </tr>
             <tr>
               <td class="title">Moisture</td>
-              <td class="desc">0.1% max</td>
+              <td class="desc">0.05% max</td>
             </tr>
           </table>
         </div>
@@ -88,7 +88,7 @@
         <div class="widgetStyle">
           <iframe
             class="pubchem-widget"
-            src="https://pubchem.ncbi.nlm.nih.gov/compound/8728#section=3D-Conformer&embed=true&hide_title=true"
+            src="https://pubchem.ncbi.nlm.nih.gov/compound/96070#section=3D-Conformer&embed=true&hide_title=true"
           ></iframe>
         </div>
       </div>
