--- a/screens/template.html
+++ b/screens/template.html
@@ -22,10 +22,10 @@
         <h1><a href="index.html">Freesia</a></h1>
 
         <div class="headerOptions">
-          <a href="index.html">Home</a>
-          <a href="index.html#productList">Products</a>
-          <a href="about.html">About</a>
-          <a href="contact.html">Contact</a>
+          <a href="../index.html">Home</a>
+          <a href="../index.html#productList">Products</a>
+          <a href="./screens/about.html">About</a>
+          <a href="./screens/contact.html">Contact</a>
         </div>
       </div>
     </div>
