--- a/screens/about.html
+++ b/screens/about.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>About Freesia Chemicals</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script
       type="text/javascript"
       src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"
@@ -19,7 +20,7 @@
   <body>
     <div class="header" id="myHeader">
       <div class="headerContainer">
-        <h1><a href="index.html">Freesia</a></h1>
+        <h1><a href="../index.html">Freesia</a></h1>
 
         <div class="headerOptions">
           <a href="../index.html">Home</a>
@@ -114,19 +115,12 @@ Mr. Arun Naik <br>
     <br>
     If interested in buying our products or want to know more, 
     please go to our contact page (<a href="contact.html">here</a>) to get in contact with us.
-
     <br><br><br>
     <br><br>
   </div>
-
   <div class="canvasContainer">
 <canvas></canvas>
   </div>
-
-</div>
-
-
-
 
 
     <script>
@@ -235,11 +229,10 @@ Node.prototype.moveNode = function() {
 };
 
 function initNodes() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
   // ctx.clearRect(0, 0, canvas.width, canvas.height);
   nodes = [];
-  for (var i = DENSITY; i < canvas.width; i += DENSITY) {
-    for (var j = DENSITY; j < canvas.height; j += DENSITY) {
+  for (var i = DENSITY; i < canvas.width+900; i += DENSITY) {
+    for (var j = DENSITY; j < canvas.height+800; j += DENSITY) {
       nodes.push(new Node(i, j));
       NODES_QTY++;
     }
@@ -334,6 +327,7 @@ redrawScene();
 })();
 
     </script>
+        <div class="blueLine"></div>
   </body>
 </html>
 
@@ -449,10 +443,39 @@ redrawScene();
     /* text-decoration: none; */
     color: #2854b8;
   }
+  @media screen and (max-width: 800px) {
+.canvasContainer{
+  display:none;
+}
+.headerOptions { display: none; }
+
+.header{
+  padding-left: 0px;
+  padding-right: 0px;
+}
+.content{
+  margin-left:18px;
+  width:90%;
+}
+
+.blueLine{
+display:block;
+width:100%;
+height:2px;
+background-color: #42d1d8;
+}
+.mainContainer{
+    display:flex;
+    flex-direction: column;
+    width:100%
+  }
+  }
+  @media screen and (min-width: 800px) {
+    .blueLine{
+display:none;
+/* width:100%;
+border: 2px;
+border-color: #42d1d8 */
+}
+  }
 </style>
-
-<!-- Stocked with Stainless Steel and glass lined reactors, High Vacuum Distillation Columns, Chilling plants 
-and many other auxiliary equipments that help create a high quality product.
-
-Freesia's proposal involves a biological plant for treating
-wastewater and recycling it for gardening purposes. -->
