--- a/screens/product/alphaTetralone.html
+++ b/screens/product/alphaTetralone.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Alpha Tetralone</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://d3js.org/d3.v4.min.js"></script>
     
     <script>
@@ -20,7 +21,7 @@
   <body>
     <div class="header" id="myHeader">
       <div class="headerContainer">
-        <h1><a href="index.html">Freesia</a></h1>
+        <h1><a href="../../index.html">Freesia</a></h1>
 
         <div class="headerOptions">
           <a href="../index.html">Home</a>
@@ -93,7 +94,7 @@
         </div>
       </div>
     </div>
-    <br/><br/><br/> <br/><br/><br/>
+    <br/><br/><br/>
     <script>
       window.onscroll = function() {
         myFunction();
@@ -110,6 +111,7 @@
         }
       }
     </script>
+    <div class="blueLine"></div>
   </body>
 </html>
 
@@ -282,5 +284,69 @@ font-size: 28px;
     width: 500px;
     height: 600px;
     bottom: 0px;
+  }
+  @media screen and (max-width: 800px) {
+  .mainContainer {
+    display: flex;
+    flex-direction: column;
+    /* width: 100%; */
+  }
+  .papers,
+  .papers:before,
+  .papers:after {
+    border: 0px;
+    box-shadow: none;
+    background-color: none;
+  }
+  .papers {
+    margin-left: 0px;
+    width: 100%;
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+  .papers:before,
+  .papers:after {
+   display:none;
+  }
+  .content {
+    margin-top: 60px;
+    margin-left: 0px;
+  }
+
+  .widgetContainer {
+    margin-top: 20px;
+    display: flex;
+    width: 100%;
+  }
+  .pubchem-widget {
+    display: flex;
+    width: 100%;
+    height: 650px;
+    bottom: 0px;
+  }
+  .widgetStyle{
+    width: 99%;
+  }
+  .headerOptions { display: none; }
+
+  .header{
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  .papers h1{
+    padding-top: 0px;
+    margin-top: 0px;
+  }
+  .blueLine{
+display:block;
+width:100%;
+height:2px;
+background-color: #42d1d8;
+}
+}
+@media screen and (min-width: 800px) {
+    .blueLine{
+display:none;
+}
   }
 </style>
