--- a/screens/product/alphaTetralone.html
+++ b/screens/product/alphaTetralone.html
@@ -26,8 +26,8 @@
         <div class="headerOptions">
           <a href="../index.html">Home</a>
           <a href="../index.html#productList">Products</a>
-          <a href="./screens/about.html">About</a>
-          <a href="./screens/contact.html">Contact</a>
+          <a href="../about.html">About</a>
+          <a href="../contact.html">Contact</a>
         </div>
       </div>
     </div>
